--- a/ux.html
+++ b/ux.html
@@ -41,8 +41,24 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://squad.breezy.hr/p/ca5c10f33549-product-manager-agent-ux'>Product Manager- Agent UX at Squad</a></h5> 
+<h5><a href='https://uxjobs.fr/job/3595-consultant-ux-h-f'>
+        [CDI] Consultant UX H/F - MOBIAPPS - UXJobs.fr
+    </a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://uxjobs.fr/job/3596-ux-designer-senior-octave-octave'>
+        [CDI] UX Designer senior - Octave Octave - Octave Octave - UXJobs.fr
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='http://styletheory.applytojob.com/apply/RjiCZOeXOF/Senior-UX-Researcher'>Senior UX Researcher - StyleTheory - Career Page</a></h5> 
+<p><span class="badge badge-light">Indonesia</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://squad.breezy.hr/p/ca5c10f33549-product-manager-agent-ux'>Product Manager- Agent UX at Squad</a></h5> 
+<p><span class="badge badge-light">Delhi/NCR, IN</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://indacareer.recruitee.com/o/ux-designer-1'>
@@ -51,7 +67,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Cermaticom/743999698355434-ui-ux-designer'>Cermati.com UI/UX Designer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Cermaticom/743999698355434-ui-ux-designer'>Cermati.com UI/UX Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta Jakarta Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -107,7 +123,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/OpQwenYJLj/Senior-UIUX-Designer'>Senior UI/UX Designer - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/OpQwenYJLj/Senior-UIUX-Designer'>Senior UI/UX Designer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA  Mountain View, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -115,11 +131,11 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/GkKpjNco3f/Quantitative-UX-Researcher-SQL-RPython-Mountain-View-CA'>Quantitative UX Researcher (SQL, R/Python) (Mountain View, CA) - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/GkKpjNco3f/Quantitative-UX-Researcher-SQL-RPython-Mountain-View-CA'>Quantitative UX Researcher (SQL, R/Python) (Mountain View, CA) - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999694368712-ux-ui-engineer-ux-ui-developer-london'>Fulton Garrick Ltd UX/UI ENGINEER/ UX/UI DEVELOPER - LONDON | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999694368712-ux-ui-engineer-ux-ui-developer-london'>Fulton Garrick Ltd UX/UI ENGINEER/ UX/UI DEVELOPER - LONDON | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -169,7 +185,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=obZkafwo&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=ni0AmMwv'>ServiceNow Careers - Lead UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=obZkafwo&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=ni0AmMwv'>ServiceNow Careers - Lead UX Designer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  San Diego, California  Kirkland, Washington</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -249,7 +265,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/internship-ui-ux-design-digital-mobility/'>Internship UI/UX Design - Digital Mobility | PRODUCTHIRE.NET</a></h5> 
+<h5><a href='https://producthire.net/job/internship-ui-ux-design-digital-mobility/'>Internship UI/UX Design - Digital Mobility | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">Hong Kong Hong Kong</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -299,7 +315,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=feed'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=feed'>
       Product designer (UX/UI) at Beeline - London, UK - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">London</span></p>
@@ -377,7 +393,7 @@
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/well/jobs/4495655002'>Job Application for Senior UI/UX Designer at Well</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/well/jobs/4495655002'>Job Application for Senior UI/UX Designer at Well</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -385,7 +401,7 @@
 <p><span class="badge badge-light">Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nicesystems/job/o357afw9'>NICE Careers - Sr. Product/UX Designer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nicesystems/job/o357afw9'>NICE Careers - Sr. Product/UX Designer</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, Utah</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -449,22 +465,6 @@
 <hr/>
 <h5><a href='https://boards.greenhouse.io/sumup/jobs/4491439002'>Job Application for Product Designer - UX/UI at SumUp</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/sumup/jobs/4494787002'>Job Application for Product Designer - UX/UI at SumUp</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='https://bux.recruitee.com/o/product-owner'>
-      Product Owner - BUX
-    </a></h5> 
-<p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='https://bux.recruitee.com/o/office-it-support-specialist-parttime'>
-      Office IT Support Specialist (Part-time) - BUX
-    </a></h5> 
-<p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
 
