--- a/biostatistics.html
+++ b/biostatistics.html
@@ -95,7 +95,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://glpg.recruitee.com/o/team-leader-biostatistics-mechelen-be'>
+<h5><a href='https://glpg.recruitee.com/o/team-leader-biostatistics-mechelen-be'>
       Team Leader Biostatistics -Mechelen, BE - Galapagos
     </a></h5> 
 <p><span class="badge badge-light">Mechelen, Belgium  France</span></p>
@@ -143,7 +143,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on:: 2019-10-05</p>
 <hr/>
-<h5><a href='https://tfscareers.workable.com/j/13CE70BC84'>TFS - Jobs: Senior Biostatistician - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tfscareers.workable.com/j/13CE70BC84'>TFS - Jobs: Senior Biostatistician - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
@@ -159,7 +159,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Barcelona Italy</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oVVp9fw8&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=nTGVYMwJ'>Premier Research Careers - Senior Biostatistician (US based)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oVVp9fw8&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=nTGVYMwJ'>Premier Research Careers - Senior Biostatistician (US based)</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on:: 2019-10-03</p>
 <hr/>
@@ -197,7 +197,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Houston, TX</span></p>
 <p>Posted on:: 2019-09-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mdanderson.referrals.selectminds.com/jobs/research-assistant-i-radiation-oncology-biostatistics-22538'>Research Assistant I, Radiation Oncology Biostatistics - MD Anderson Cancer Center Careers</a></h5> 
+<h5><a href='https://mdanderson.referrals.selectminds.com/jobs/research-assistant-i-radiation-oncology-biostatistics-22538'>Research Assistant I, Radiation Oncology Biostatistics - MD Anderson Cancer Center Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-23</p>
 <hr/>
@@ -235,7 +235,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Brisbane</span></p>
 <p>Posted on: 2019-09-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mainebhr.recruiterbox.com/jobs/fk03vmv/'>
+<h5><a href='https://mainebhr.recruiterbox.com/jobs/fk03vmv/'>
     Biologist III - 1303 at State of Maine
 </a></h5> 
 <p><span class="badge badge-light">Maine, United States</span></p>
@@ -257,7 +257,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Darmstadt, Germany</span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premier-research/job/oOrAafwJ'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/oOrAafwJ'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
@@ -273,7 +273,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Sofia, Bulgaria</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/premier-research/job/oHrAafwC'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/oHrAafwC'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Wokingham, United Kingdom</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -331,7 +331,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://adaptimmunellc.applytojob.com/apply/kCytWwfh2i/Principal-Biostatistician'>Principal Biostatistician - Adaptimmune - Career Page</a></h5> 
+<h5><a href='http://adaptimmunellc.applytojob.com/apply/kCytWwfh2i/Principal-Biostatistician'>Principal Biostatistician - Adaptimmune - Career Page</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
@@ -472,7 +472,7 @@ States in a poll conducted by The Scientist magazine! Our Values: INTEGRITY?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-08-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mainebhr.recruiterbox.com/jobs/fk031bf/'>
+<h5><a href='https://mainebhr.recruiterbox.com/jobs/fk031bf/'>
     IF&W Senior Resource Biologist - Fisheries - 1111 at State of Maine
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
